# example-cmake-fetch-content

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/mymod/: CMakeLists.txt  MyMod.cpp
